--- a/SampleFolder/calculateArea/calculate_area.html
+++ b/SampleFolder/calculateArea/calculate_area.html
@@ -13,6 +13,20 @@
   <button onclick="calculateArea()">Calculate Area</button><br><br>
 
   <p id="result"></p>
+
+  <h1>Total calc</h1>
+  <label for="grocery1">Enter first grocery amount: </label>
+  <input class="grocery" type="number" id="grocery1"><br><br>
+
+  <label for="grocery2">Enter second grocery amount: </label>
+  <input class="grocery" type="number" id="grocery2"><br><br>
+
+  <label for="grocery3">Enter third grocery amount: </label>
+  <input class="grocery" type="number" id="grocery3"><br><br>
+
+  <button onclick="calculateTotal()">Calculate Total</button><br><br>
+
+  <p id="Total"></p>
 <script src="./calculate_Area.js"></script>
 </body>
 </html>
